FinalProject/app/src/main/java/co/edu/unal/finalproject/matlabParser.java
// Generated from /home/juan/AndroidStudioProjects/FinalProject/app/src/main/java/co/edu/unal/finalproject/matlab.g4 by ANTLR 4.10.1
package co.edu.unal.finalproject;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class matlabParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		ADD_OP=10, AND_OP=11, ARRAYMUL=12, ARRAYDIV=13, ARRAYRDIV=14, ARRAYPOW=15, 
		BREAK=16, DIV_OP=17, RETURN=18, FUNCTION=19, FOR=20, WHILE=21, END=22, 
		GLOBAL=23, IF=24, CLEAR=25, ELSE=26, ELSEIF=27, L_OP=28, LE_OP=29, G_OP=30, 
		GE_OP=31, EQ_OP=32, MUL_OP=33, NE_OP=34, NEG_OP=35, OR_OP=36, POW_OP=37, 
		SUB_OP=38, TRANSPOSE=39, NCTRANSPOSE=40, STRING_LITERAL=41, IDENTIFIER=42, 
		CONSTANT=43, CR=44, WS=45;
	public static final int
		RULE_primary_expression = 0, RULE_postfix_expression = 1, RULE_index_expression = 2, 
		RULE_index_expression_list = 3, RULE_array_expression = 4, RULE_unary_expression = 5, 
		RULE_unary_operator = 6, RULE_multiplicative_expression = 7, RULE_additive_expression = 8, 
		RULE_relational_expression = 9, RULE_equality_expression = 10, RULE_and_expression = 11, 
		RULE_or_expression = 12, RULE_expression = 13, RULE_assignment_expression = 14, 
		RULE_eostmt = 15, RULE_statement = 16, RULE_statement_list = 17, RULE_identifier_list = 18, 
		RULE_global_statement = 19, RULE_clear_statement = 20, RULE_expression_statement = 21, 
		RULE_assignment_statement = 22, RULE_array_element = 23, RULE_array_list = 24, 
		RULE_selection_statement = 25, RULE_elseif_clause = 26, RULE_iteration_statement = 27, 
		RULE_jump_statement = 28, RULE_translation_unit = 29, RULE_func_ident_list = 30, 
		RULE_func_return_list = 31, RULE_function_declare_lhs = 32, RULE_function_declare = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"primary_expression", "postfix_expression", "index_expression", "index_expression_list", 
			"array_expression", "unary_expression", "unary_operator", "multiplicative_expression", 
			"additive_expression", "relational_expression", "equality_expression", 
			"and_expression", "or_expression", "expression", "assignment_expression", 
			"eostmt", "statement", "statement_list", "identifier_list", "global_statement", 
			"clear_statement", "expression_statement", "assignment_statement", "array_element", 
			"array_list", "selection_statement", "elseif_clause", "iteration_statement", 
			"jump_statement", "translation_unit", "func_ident_list", "func_return_list", 
			"function_declare_lhs", "function_declare"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "':'", "','", "'\\'", "'='", "';'", 
			"'+'", "'&'", "'.*'", "'.\\'", "'./'", "'.^'", "'break'", "'/'", "'return'", 
			"'function'", "'for'", "'while'", "'end'", "'global'", "'if'", "'clear'", 
			"'else'", "'elseif'", "'<'", "'<='", "'>'", "'>='", "'=='", "'*'", "'~='", 
			"'~'", "'|'", "'^'", "'-'", "'transpose'", "'.''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "ADD_OP", 
			"AND_OP", "ARRAYMUL", "ARRAYDIV", "ARRAYRDIV", "ARRAYPOW", "BREAK", "DIV_OP", 
			"RETURN", "FUNCTION", "FOR", "WHILE", "END", "GLOBAL", "IF", "CLEAR", 
			"ELSE", "ELSEIF", "L_OP", "LE_OP", "G_OP", "GE_OP", "EQ_OP", "MUL_OP", 
			"NE_OP", "NEG_OP", "OR_OP", "POW_OP", "SUB_OP", "TRANSPOSE", "NCTRANSPOSE", 
			"STRING_LITERAL", "IDENTIFIER", "CONSTANT", "CR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "matlab.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public matlabParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Primary_expressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(matlabParser.IDENTIFIER, 0); }
		public TerminalNode CONSTANT() { return getToken(matlabParser.CONSTANT, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(matlabParser.STRING_LITERAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Array_listContext array_list() {
			return getRuleContext(Array_listContext.class,0);
		}
		public Primary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof matlabVisitor ) return ((matlabVisitor<? extends T>)visitor).visitPrimary_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primary_expressionContext primary_expression() throws RecognitionException {
		Primary_expressionContext _localctx = new Primary_expressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primary_expression);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				match(IDENTIFIER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				match(CONSTANT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				match(STRING_LITERAL);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				match(T__0);
				setState(72);
				expression(0);
				setState(73);
				match(T__1);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				match(T__2);
				setState(76);
				match(T__3);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				match(T__2);
				setState(78);
				array_list(0);
				setState(79);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Postfix_expressionContext extends ParserRuleContext {
		public Primary_expressionContext primary_expression() {
			return getRuleContext(Primary_expressionContext.class,0);
		}
		public Array_expressionContext array_expression() {
			return getRuleContext(Array_expressionContext.class,0);
		}
		public Postfix_expressionContext postfix_expression() {
			return getRuleContext(Postfix_expressionContext.class,0);
		}
		public TerminalNode TRANSPOSE() { return getToken(matlabParser.TRANSPOSE, 0); }
		public TerminalNode NCTRANSPOSE() { return getToken(matlabParser.NCTRANSPOSE, 0); }
		public Postfix_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfix_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof matlabVisitor ) return ((matlabVisitor<? extends T>)visitor).visitPostfix_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Postfix_expressionContext postfix_expression() throws RecognitionException {
		return postfix_expression(0);
	}

	private Postfix_expressionContext postfix_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Postfix_expressionContext _localctx = new Postfix_expressionContext(_ctx, _parentState);
		Postfix_expressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_postfix_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(84);
				primary_expression();
				}
				break;
			case 2:
				{
				setState(85);
				array_expression();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(92);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new Postfix_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfix_expression);
						setState(88);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(89);
						match(TRANSPOSE);
						}
						break;
					case 2:
						{
						_localctx = new Postfix_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfix_expression);
						setState(90);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(91);
						match(NCTRANSPOSE);
						}
						break;
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Index_expressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Index_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof matlabVisitor ) return ((matlabVisitor<? extends T>)visitor).visitIndex_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_expressionContext index_expression() throws RecognitionException {
		Index_expressionContext _localctx = new Index_expressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_index_expression);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(T__4);
				}
				break;
			case T__0:
			case T__2:
			case ADD_OP:
			case NEG_OP:
			case SUB_OP:
			case STRING_LITERAL:
			case IDENTIFIER:
			case CONSTANT:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Index_expression_listContext extends ParserRuleContext {
		public Index_expressionContext index_expression() {
			return getRuleContext(Index_expressionContext.class,0);
		}
		public Index_expression_listContext index_expression_list() {
			return getRuleContext(Index_expression_listContext.class,0);
		}
		public Index_expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_expression_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof matlabVisitor ) return ((matlabVisitor<? extends T>)visitor).visitIndex_expression_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_expression_listContext index_expression_list() throws RecognitionException {
		return index_expression_list(0);
	}

	private Index_expression_listContext index_expression_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Index_expression_listContext _localctx = new Index_expression_listContext(_ctx, _parentState);
		Index_expression_listContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_index_expression_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(102);
			index_expression();
			}
			_ctx.stop = _input.LT(-1);
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Index_expression_listContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_index_expression_list);
					setState(104);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(105);
					match(T__5);
					setState(106);
					index_expression();
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Array_expressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(matlabParser.IDENTIFIER, 0); }
		public Primary_expressionContext primary_expression() {
			return getRuleContext(Primary_expressionContext.class,0);
		}
		public Array_expressionContext array_expression() {
			return getRuleContext(Array_expressionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Array_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof matlabVisitor ) return ((matlabVisitor<? extends T>)visitor).visitArray_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_expressionContext array_expression() throws RecognitionException {
		Array_expressionContext _localctx = new Array_expressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_array_expression);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(IDENTIFIER);
				setState(113);
				match(T__0);
				setState(114);
				primary_expression();
				setState(115);
				match(T__1);
				setState(116);
				array_expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(IDENTIFIER);
				setState(119);
				match(T__0);
				setState(120);
				primary_expression();
				setState(121);
				match(T__1);
				setState(122);
				expression(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				match(IDENTIFIER);
				setState(125);
				match(T__0);
				setState(126);
				primary_expression();
				setState(127);
				match(T__1);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				match(IDENTIFIER);
				setState(130);
				match(T__0);
				setState(131);
				expression(0);
				setState(132);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unary_expressionContext extends ParserRuleContext {
		public Postfix_expressionContext postfix_expression() {
			return getRuleContext(Postfix_expressionContext.class,0);
		}
		public Unary_operatorContext unary_operator() {
			return getRuleContext(Unary_operatorContext.class,0);
		}
		public Unary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof matlabVisitor ) return ((matlabVisitor<? extends T>)visitor).visitUnary_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Unary_expressionContext unary_expression() throws RecognitionException {
		Unary_expressionContext _localctx = new Unary_expressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_unary_expression);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__2:
			case STRING_LITERAL:
			case IDENTIFIER:
			case CONSTANT:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				postfix_expression(0);
				}
				break;
			case ADD_OP:
			case NEG_OP:
			case SUB_OP:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				unary_operator();
				setState(138);
				postfix_expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unary_operatorContext extends ParserRuleContext {
		public TerminalNode ADD_OP() { return getToken(matlabParser.ADD_OP, 0); }
		public TerminalNode SUB_OP() { return getToken(matlabParser.SUB_OP, 0); }
		public TerminalNode NEG_OP() { return getToken(matlabParser.NEG_OP, 0); }
		public Unary_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_operator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof matlabVisitor ) return ((matlabVisitor<? extends T>)visitor).visitUnary_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Unary_operatorContext unary_operator() throws RecognitionException {
		Unary_operatorContext _localctx = new Unary_operatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_unary_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD_OP) | (1L << NEG_OP) | (1L << SUB_OP))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multiplicative_expressionContext extends ParserRuleContext {
		public Unary_expressionContext unary_expression() {
			return getRuleContext(Unary_expressionContext.class,0);
		}
		public Multiplicative_expressionContext multiplicative_expression() {
			return getRuleContext(Multiplicative_expressionContext.class,0);
		}
		public TerminalNode MUL_OP() { return getToken(matlabParser.MUL_OP, 0); }
		public TerminalNode DIV_OP() { return getToken(matlabParser.DIV_OP, 0); }
		public TerminalNode POW_OP() { return getToken(matlabParser.POW_OP, 0); }
		public TerminalNode ARRAYMUL() { return getToken(matlabParser.ARRAYMUL, 0); }
		public TerminalNode ARRAYDIV() { return getToken(matlabParser.ARRAYDIV, 0); }
		public TerminalNode ARRAYRDIV() { return getToken(matlabParser.ARRAYRDIV, 0); }
		public TerminalNode ARRAYPOW() { return getToken(matlabParser.ARRAYPOW, 0); }
		public Multiplicative_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicative_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof matlabVisitor ) return ((matlabVisitor<? extends T>)visitor).visitMultiplicative_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiplicative_expressionContext multiplicative_expression() throws RecognitionException {
		return multiplicative_expression(0);
	}
